@@ -23,8 +23,10 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:freezesText="true"
+        android:inputType="number"
         android:text="2"
         android:visibility="visible" >
+
     </EditText>
 
     <TextView
@@ -41,6 +43,7 @@
         android:layout_weight="1"
         android:ems="10"
         android:freezesText="true"
+        android:inputType="number"
         android:text="1"
         android:visibility="visible" />
 
@@ -69,12 +72,33 @@
         android:textStyle="bold" >
     </TextView>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1" >
+
+        <Button
+            android:id="@+id/slider_staticFooter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Static" />
+
+        <Button
+            android:id="@+id/slider_dynamicFooter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Dynamic" />
+
+    </LinearLayout>
+
     <EditText
         android:id="@+id/txtSliderFooter"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:freezesText="true"
-        android:text="Slider Footer"
+        android:text="@string/slider_footer"
         android:visibility="visible" >
     </EditText>
 
@@ -90,9 +114,9 @@
         android:id="@+id/txtTimeout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:ems="10"
         android:freezesText="true"
         android:text="5000"
-        android:visibility="visible" >
-    </EditText>
+        android:visibility="visible" />
 
 </LinearLayout>
