@@ -4,4 +4,5 @@
     <string name="app_name">SyncProxyTester</string>
 <string name="connect">Connect</string>
 <string name="speak">Speak</string>
+<string name="slider_footer">Slider Footer</string>
 </resources>
